Margin spacing fixed for projectsContainer onthe index page

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -845,7 +845,7 @@ nav {
     #projectsContainer { 
         width: 100%;
         flex-direction: row;
-        padding-bottom: 13vh;
+        margin-bottom: 13vh !important;
 
         h3 {
             font-size: 1.5rem;
@@ -919,9 +919,9 @@ nav {
     // About me page styling
     #about-me-container {
         padding: 1.5rem;
-        padding-bottom: 1.5rem;
+        padding-bottom: 2.8rem;
         width: 60%;
-        height:45vh;
+        height:48vh;
         
         img {
             max-width: 20%;
